# sync-malloc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  stdtest.c  sync_malloc.c  sync_malloc.h  tester.c  types.h
